# vs2lma

./: .gitignore  README.md  README.zh-CN.md  package-lock.json  package.json
.github/workflows/: release.yml
app/: app.js  i18n.js  index.html  styles.css
scripts/: build-sea.cjs  inject-version.cjs
src/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/config/: defaults.ts  store.ts  types.ts  validate.ts
src/server/: logger.ts  routes.ts  server.ts
